# emailrelay

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.windows  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  emailrelay.spec
bsd/: Makefile.in
debian/: Makefile.in  changelog
doc/: Makefile.am  Makefile.in  developer.txt  doxygen.cfg.in  doxygen_header.html  emailrelay-man.html  emailrelay-passwd.1  emailrelay-poke.1  emailrelay-submit.1  emailrelay.1  emailrelay.css  index.html  reference.txt  userguide.txt  windows.txt
etc/: Makefile.in
lib/: Makefile.am  Makefile.in
lib/gcc2.95/: Makefile.am  Makefile.in  exception  iostream  limits  sstream  xlocale
lib/msvc6.0/: Makefile.am  Makefile.in  cstdio  cstdlib  cstring  ctime
m4/: Makefile.in
src/: Makefile.am  Makefile.in  emailrelay.dsw  mingw-common.mak
src/gauth/: Makefile.in  gauth.h  gcram.cpp  gcram.h  gsaslclient.cpp  gsaslclient.h  gsaslclient_native.cpp  gsaslclient_none.cpp  gsaslclientsecrets.cpp  gsaslclientsecrets.h  gsaslserver.cpp  gsaslserver.h  gsaslserverbasic.cpp  gsaslserverbasic.h  gsaslserverbasic_native.cpp  gsaslserverbasic_none.cpp  gsaslserverfactory.h  gsaslserverfactory_basic.cpp  gsaslserverfactory_native.cpp  gsaslserverfactory_pam.cpp  gsaslserverpam.cpp  gsaslserverpam.h  gsaslserversecrets.cpp  gsaslserversecrets.h  gsecret.cpp  gsecret.h  gsecrets.cpp  gsecrets.h  gsecrets_full.cpp  gsecrets_none.cpp  gsecrets_pam.cpp  gsecretsfile.cpp  gsecretsfile.h  gvalid.cpp  gvalid.h
src/gfilters/: gcopyfilter.cpp  gcopyfilter.h  gdeliveryfilter.cpp  gdeliveryfilter.h  gexecutablefilter.cpp  gexecutablefilter.h  gfilterchain.cpp  gfilterchain.h  gfilterfactory.cpp  gfilterfactory.h  gmessageidfilter.cpp  gmessageidfilter.h  gmxfilter.cpp  gmxfilter.h  gmxlookup.cpp  gmxlookup.h  gnetworkfilter.cpp  gnetworkfilter.h  gnullfilter.cpp  gnullfilter.h  gsimplefilterbase.cpp  gsimplefilterbase.h  gspamfilter.cpp  gspamfilter.h  gsplitfilter.cpp  gsplitfilter.h
src/glib/: Makefile.am  Makefile.in  galign.h  garg.cpp  garg.h  garg_mac.cpp  garg_unix.cpp  garg_win32.cpp  gassert.h  gbase64.cpp  gbase64.h  gbasicaddress.h  gbatchfile.cpp  gbatchfile.h  gbuffer.h  gcall.h  gcleanup.h  gcleanup_unix.cpp  gcleanup_win32.cpp  gconvert.cpp  gconvert.h  gconvert_unix.cpp  gconvert_win32.cpp  gcounter.cpp  gcounter.h  gcredentials.h  gdaemon.cpp  gdaemon.h  gdaemon_unix.cpp  gdaemon_win32.cpp  gdate.cpp  gdate.h  gdatetime.cpp  gdatetime.h  gdatetime_unix.cpp  gdatetime_win32.cpp  gdebug.h  gdef.h  gdirectory.cpp  gdirectory.h  (+148 more)
src/gnet/: Makefile.am  Makefile.in  gaddress.cpp  gaddress.h  gaddress4.cpp  gaddress4.h  gaddress6.cpp  gaddress6.h  gaddress_ip.cpp  gaddress_ipv4.cpp  gaddress_ipv6.cpp  gaddresslocal.h  gaddresslocal_none.cpp  gaddresslocal_unix.cpp  gbufferedclient.cpp  gbufferedclient.h  gbufferedserverpeer.cpp  gbufferedserverpeer.h  gclient.cpp  gclient.h  gclient_unix.cpp  gclient_win32.cpp  gclientbaseimp.h  gclientptr.cpp  gclientptr.h  gconnection.cpp  gconnection.h  gconnectionlookup.h  gconnectionlookup_unix.cpp  gconnectionlookup_win32.cpp  gdescriptor.cpp  gdescriptor.h  gdescriptor_unix.cpp  gdescriptor_win32.cpp  gdnsbl.h  gdnsbl_disabled.cpp  gdnsbl_enabled.cpp  gdnsblock.cpp  gdnsblock.h  gdnsmessage.cpp  (+113 more)
src/gpop/: Makefile.in  gnopop.cpp  gpop.h  gpop_disabled.cpp  gpop_enabled.cpp  gpopauth.cpp  gpopauth.h  gpopsecrets.cpp  gpopsecrets.h  gpopsecrets_unix.cpp  gpopsecrets_win32.cpp  gpopserver.cpp  gpopserver.h  gpopserverprotocol.cpp  gpopserverprotocol.h  gpopstore.cpp  gpopstore.h
src/gsmtp/: Makefile.am  Makefile.in  gadminserver.cpp  gadminserver.h  gbase64.cpp  gbase64.h  gclientprotocol.cpp  gclientprotocol.h  genvelope.cpp  genvelope.h  gexecutablefilter.cpp  gexecutablefilter.h  gexecutableprocessor.cpp  gexecutableprocessor.h  gexecutableverifier.cpp  gexecutableverifier.h  gfactoryparser.cpp  gfactoryparser.h  gfilestore.cpp  gfilestore.h  gfilter.cpp  gfilter.h  gfilterchain.cpp  gfilterchain.h  gfilterfactory.cpp  gfilterfactory.h  gfilterfactorybase.cpp  gfilterfactorybase.h  ginternalverifier.cpp  ginternalverifier.h  gmessagestore.cpp  gmessagestore.h  gmessagestore_unix.cpp  gmessagestore_win32.cpp  gnetworkfilter.cpp  gnetworkfilter.h  gnetworkprocessor.cpp  gnetworkprocessor.h  gnetworkverifier.cpp  gnetworkverifier.h  (+82 more)
src/gssl/: Makefile.in  gssl.cpp  gssl.h  gssl_mbedtls.cpp  gssl_mbedtls.h  gssl_mbedtls_headers.h  gssl_mbedtls_keygen.cpp  gssl_mbedtls_keygen.h  gssl_mbedtls_utils.h  gssl_none.cpp  gssl_openssl.cpp  gssl_openssl.h  gssl_use_both.cpp  gssl_use_mbedtls.cpp  gssl_use_openssl.cpp
src/gstore/: genvelope.cpp  genvelope.h  gfiledelivery.cpp  gfiledelivery.h  gfilestore.cpp  gfilestore.h  gmessagedelivery.cpp  gmessagedelivery.h  gmessagestore.cpp  gmessagestore.h  gmessagestore_unix.cpp  gmessagestore_win32.cpp  gnewfile.cpp  gnewfile.h  gnewmessage.cpp  gnewmessage.h  gstoredfile.cpp  gstoredfile.h  gstoredmessage.cpp  gstoredmessage.h
src/gui/: Makefile.in  access.h  access_mac.cpp  access_unix.cpp  access_win32.cpp  boot.cpp  boot.h  boot_mac.cpp  boot_unix.cpp  boot_win32.cpp  (+67 more)
src/main/: Makefile.am  Makefile.in  admin.h  admin_disabled.cpp  admin_enabled.cpp  auth.cfg  commandline.cpp  commandline.h  commandline_full.cpp  commandline_simple.cpp  commandline_unix.cpp  commandline_win32.cpp  common.dsp  configuration.cpp  configuration.h  doxygen.cfg  doxygen.h  emailrelay-fastbuild.cpp  emailrelay.dsp  emailrelay.dsw  emailrelay.rc  filter.cpp  filter.dsp  filter.h  filter_copy.cpp  gadminserver.cpp  gadminserver.h  gbase64.cpp  gbase64.h  gclientprotocol.cpp  gclientprotocol.h  gfilestore.cpp  gfilestore.h  gmessagestore.cpp  gmessagestore.h  gmessagestore_unix.cpp  gmessagestore_win32.cpp  gnewfile.cpp  gnewfile.h  gnewmessage.cpp  (+83 more)
src/main/icon/: Makefile.in
test/: Makefile.in  emailrelay-test.pl_  emailrelay_test_client.cpp  emailrelay_test_dnsserver.cpp  emailrelay_test_keygen.cpp  emailrelay_test_scanner.cpp  emailrelay_test_server.cpp  emailrelay_test_verifier.cpp
(+43 files in other folders)
