# 
# Copyright (C) 2001 Graeme Walker <graeme_walker@users.sourceforge.net>
# 
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later
# version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
# 
# ===
EXTRA_DIST=garg_win32.cpp \
	gdaemon_win32.cpp \
	gdatetime_win32.cpp \
	gdirectory_win32.cpp \
	gfs_win32.cpp \
	glogoutput_win32.cpp \
	gpid_win32.cpp \
	gfile_win32.cpp \
	gnumber.cpp
INCLUDES = -I$(top_srcdir)/lib/gcc2.95
noinst_LIBRARIES = libglib.a
libglib_a_SOURCES = garg.cpp \
	garg_unix.cpp \
	gdaemon_unix.cpp \
	gdate.cpp \
	gdatetime.cpp \
	gdatetime_unix.cpp \
	gdirectory.cpp \
	gdirectory_unix.cpp \
	gexception.cpp \
	gfile.cpp \
	gfile_unix.cpp \
	gfs_unix.cpp \
	ggetopt.cpp \
	glog.cpp \
	glogoutput.cpp \
	glogoutput_unix.cpp \
	gpath.cpp \
	gpid_unix.cpp \
	gstr.cpp \
	gtime.cpp \
	gdef.h \
	garg.h \
	gdaemon.h \
	gdate.h \
	gdatetime.h \
	gdirectory.h \
	gexception.h \
	gfile.h \
	gfs.h \
	ggetopt.h \
	glog.h \
	glogoutput.h \
	gnumber.h \
	gpath.h \
	gpid.h \
	gstr.h \
	gtime.h \
	gstrings.h \
	gdebug.h \
	gassert.h \
	gconvert.h \
	gmemory.h

